# SkillFlow

./: .gitignore  README.md  VIDEO_UPLOAD_FEATURE.md
.kiro/specs/fix-frontend-compilation-errors/: design.md  requirements.md  tasks.md
.kiro/specs/ui-optimization/: design.md  requirements.md  tasks.md
SkillFlow/: lm_touch_tech.md  photoshop_white_bg.json  photoshop_white_bg_coords.json  schema.json  vlm.md
SkillFlow/.trae/documents/: Implement Dual-Model Automation with SiliconFlow.md  Implement Native macOS Input Control Module.md  VLM 驱动的 macOS 自动化实现计划.md  为技能库集成 SwiftData 存储.md  保留 UI 删除逻辑代码计划.md  实现后端 API 集成计划.md
SkillFlow/SkillFlow/: AIPDLModels.swift  ContentView.swift  Info.plist  Item.swift  Models.swift  SkillFlowApp.swift  VLMModels.swift
SkillFlow/SkillFlow.xcodeproj/: project.pbxproj
SkillFlow/SkillFlow/Models/: Task.swift  (+8 more)
ai-assistant-software/AIAssistantApp/: AIAssistantApp.swift
rust-backend/: Cargo.toml  temp.json
rust-backend/.trae/documents/: Implement Audio and Video Processing Backend Modules.md  Task Pipeline Implementation Plan.md  Task Tracking System Implementation Plan.md
rust-backend/src/: handlers.rs  main.rs  router.rs
rust-backend/src/domain/: mod.rs  package.rs  skill.rs  task.rs
rust-backend/src/service/: mod.rs  process.rs  task_service.rs
skillflow-backend/: .env.example  README.md  main.py  requirements.txt  setup.sh
skillflow-backend/api/: routes.py  websocket.py
skillflow-backend/services/: ai_analyzer.py  step_generator.py  video_processor.py
skillflow-backend/tests/: test_api.py  test_step_generator.py
(+55 files in other folders)
