[package]
name = "phantom_be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"] }
dotenvy = "0.15"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["trace"] }
